--- a/1LogInPage.html
+++ b/1LogInPage.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="LoginBox">
-      <form id="loginForm" action="class-homepage.html" method="get">
+      <form id="loginForm" action="class-homepage.html" method="post">
         <h1>BINHS STUDENTS - PORTAL</h1>
         <div class="input-user">
           <i class="bx bxs-user"></i>
