--- a/home-contact.html
+++ b/home-contact.html
@@ -17,7 +17,7 @@
 <body>
     <div class="title">
         <div class="back-button">
-            <a href="class-homepage.html"><i class='bx bx-left-arrow'></i></a>
+            <a href="index.html"><i class='bx bx-left-arrow'></i></a>
         </div>
 
         <div class="title-content">
