--- a/class-modules.html
+++ b/class-modules.html
@@ -32,7 +32,7 @@
         <nav>     
             <ul>
                 <li>
-                    <a href="class-homepage.html">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
     
                 <li>
