--- a/class-schedule-sem2.html
+++ b/class-schedule-sem2.html
@@ -17,7 +17,7 @@
 <body>
     <div class="title">
         <div class="back-button">
-            <a href="class-homepage.html"><i class='bx bx-left-arrow'></i></a>
+            <a href="index.html"><i class='bx bx-left-arrow'></i></a>
         </div>
 
         <div class="title-content">
@@ -32,7 +32,7 @@
         <nav>  
             <ul>     
                 <li>
-                    <a href="class-homepage.html">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
 
                 <li>
