--- a/home-about.html
+++ b/home-about.html
@@ -32,7 +32,7 @@ e<html lang="en">
     <nav>     
         <ul>
             <li>
-                <a href="class-homepage.html">Home</a>
+                <a href="index.html">Home</a>
             </li>
 
             <li>
